Added a refresh token.
